Changelog
=========

1.3.1 - IN DEVELOPMENT
~~~~~~~~~~~~~~~~~~~~~~

 * Added default button examples to test.html
 * Added basic grid examples to test.html
 * Fixed 0px lint warning
 * Removed vertical align from button due to odd inline issue
 * Added variable $input-font-color to set all inputs

1.3.0 - 05-Jul-2017
~~~~~~~~~~~~~~~~~~~

 * Added new variable `$input-background-focus` for when an input, select or textarea has focus.
 * Removed `push-*` and `pull-*` grid classes in favour of `order-*`.
 * Simplified gutter widths to single variable `$grid-gutter-width`.

1.2.3 - 02-Jul-2017
~~~~~~~~~~~~~~~~~~~

 * Added new variables that allow all form fields to be styled.
 * Reduced margins on `hr`, `ul` and `ol`.
 * Removed awkward defaults on inputs and textareas for ios.