@@ -108,6 +108,7 @@ $input-font-size:               1.5rem !default;
 $input-font-color:              $font-color !default;
 $input-padding-y:               1rem !default;
 $input-padding-x:               1rem !default;
+$input-margin-bottom:           1.5rem !default;
 
 $label-font-weight: 600 !default;
 
