@@ -1,13 +1,6 @@
 // Spacing
 //––––––––––––––––––––––––––––––––––––––––––––––––––
 
-input:not(.button):not([type=checkbox]):not([type=radio]),
-textarea,
-select,
-fieldset {
-    margin-bottom: 1.5rem;
-}
-
 pre,
 blockquote,
 dl,
