@@ -8,8 +8,9 @@ Changelog
  * Added basic grid examples to test.html
  * Fixed 0px lint warning
  * Removed vertical align from button due to odd inline issue
- * Added variable $input-font-color to set all inputs
-
+ * Added variable $input-font-color to set all inputs, selects, textareas
+ * Added variable $input-margin-bottom to set all  inputs, selects, textareas, fieldsets
+ 
 1.3.0 - 05-Jul-2017
 ~~~~~~~~~~~~~~~~~~~
 
